added post and comment repo and controller
