# controllers/post_controller.go
@@ -4,6 +4,7 @@ import (
 	"lucamienert/twitter-clone/models"
 	"lucamienert/twitter-clone/services"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -23,7 +24,7 @@ func NewPostController(service *services.PostService) *PostController {
 // @Security     BearerAuth
 // @Accept       json
 // @Produce      json
-// @Param        post  body  map[string]string  true  "Post Data"
+// @Param        post  body  models.Post  true  "Post Data"
 // @Success      201  {object}  map[string]string
 // @Router       /post [post]
 func (pc *PostController) CreatePost(c *gin.Context) {
@@ -33,8 +34,7 @@ func (pc *PostController) CreatePost(c *gin.Context) {
 		return
 	}
 
-	err := pc.service.CreatePost(&post)
-	if err != nil {
+	if err := pc.service.CreatePost(&post); err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create post"})
 		return
 	}
@@ -46,9 +46,8 @@ func (pc *PostController) CreatePost(c *gin.Context) {
 // @Summary      Get all posts
 // @Description  Fetch all posts from the database
 // @Tags         Posts
-// @Security     BearerAuth
 // @Produce      json
-// @Success      200  {array}  map[string]string
+// @Success      200  {array}  models.Post
 // @Router       /posts [get]
 func (pc *PostController) GetPosts(c *gin.Context) {
 	posts, err := pc.service.GetPosts()
@@ -57,4 +56,27 @@ func (pc *PostController) GetPosts(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, posts)
+}
+
+// LikePost godoc
+// @Summary      Like a post
+// @Description  Increments the like count of a specific post
+// @Tags         Posts
+// @Security     BearerAuth
+// @Param        id  path  int  true  "Post ID"
+// @Success      200  {object}  map[string]string
+// @Router       /post/{id}/like [post]
+func (pc *PostController) LikePost(c *gin.Context) {
+	postID, err := strconv.Atoi(c.Param("post_id"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid post ID"})
+		return
+	}
+
+	if err := pc.service.LikePost(uint(postID)); err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to like post"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "Post liked"})
 }
