# models/post.go
@@ -1,10 +1,25 @@
 package models
 
-import "gorm.io/gorm"
+import (
+	"time"
+)
 
 type Post struct {
-	gorm.Model
-	UserID uint   `json:"user_id"`
-	Text   string `json:"text"`
-	Likes  int    `json:"likes"`
+	ID        uint      `json:"id" gorm:"primaryKey"`
+	Content   string    `json:"content"`
+	Likes     int       `json:"likes" gorm:"default:0"`
+	Comments  []Comment `json:"comments" gorm:"foreignKey:PostID"`
+	CreatedAt time.Time `json:"created_at"`
+}
+
+type Like struct {
+	ID     uint `json:"id" gorm:"primaryKey"`
+	PostID uint `json:"post_id"`
+}
+
+type Comment struct {
+	ID        uint      `json:"id" gorm:"primaryKey"`
+	PostID    uint      `json:"post_id"`
+	Text      string    `json:"text"`
+	CreatedAt time.Time `json:"created_at"`
 }
